Improved controller and tests